Customised vim a bit, minor changes to tmux and zsh

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,52 +5,67 @@ unbind C-b
 # Lower the command delay
 set -s escape-time 1
 # Start window index from 1 instead of 0
-set -g base-index 1
+#set -g base-index 1
 # Do the same for panes
-setw -g pane-base-index 1
+#setw -g pane-base-index 1
+
+# Main pane size when using layouts
+#setw -g main-pane-width 140
+#setw -g main-pane-height 70
 
 # Reload the configuration
 bind r source-file ~/.tmux.conf \; display "Configuration reloaded."
+
 # Send the prefix to other applications
 bind C-a send-prefix
-# Split the window horizontally
+
+# Split the window
 bind | split-window -h
-# Split the window vertically
 bind - split-window -v
+
 # Use vim-style pane navigation
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
 # Same for windows
 bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
+
 # Resizing panes vim-style
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
 # Disable mouse input
 setw -g mode-mouse off
 set -g mouse-select-pane off
 set -g mouse-resize-pane off
 set -g mouse-select-window off
+
 # Colors!
 set -g default-terminal "screen-256color"
+
 # set window status bar colors (inactive window)
 setw -g window-status-fg cyan 
 setw -g window-status-bg default
 setw -g window-status-attr dim
+
 # set window status bar colors (active window)
 setw -g window-status-current-fg white
 setw -g window-status-current-bg red
 setw -g window-status-current-attr bright
+
 # Set pane colors (inactive)
 set -g pane-border-fg green
 set -g pane-border-bg black
+
 # Set pane colors (active)
 set -g pane-active-border-fg white
 set -g pane-active-border-bg yellow
+
 # Set command line colors
 set -g message-fg white
 set -g message-bg black
