--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -80,3 +80,16 @@ set -g status-utf8 on
 set -g status-interval 60
 set -g monitor-activity on
 set -g visual-activity on
+
+# Vim mode
+setw -g mode-keys vi
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
+
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
