--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,13 @@
 !/vim/tmp/.keep
 /vim/undo/*
 !/vim/undo/.keep
-/vim/bundle
+/vim/bundle.smex-items
+*~$
+places
+.recentf
+ido.last
+cider-history
+projectile-bookmarks.eld
+projectile.cache
+auto-save-list
+backups
