--- a/bundle/config
+++ b/bundle/config
@@ -2,7 +2,9 @@
 BUNDLE_BUILD__LIBV8: "--with-system-v8"
 BUNDLE_JOBS: '4'
 BUNDLE_DISABLE_MULTISOURCE: 'true'
-BUNDLE_GEM__TEST: 'false'
+BUNDLE_GEM__TEST: rspec
 BUNDLE_GEM__COC: 'false'
-BUNDLE_GEM__MIT: 'false'
+BUNDLE_GEM__MIT: 'true'
 BUNDLE_BUILD__MYSQL: "--with-mysql-config=/usr/local/bin/mysql_config"
+BUNDLE_BUILD__EVENTMACHINE: "--with-cppflags=-I/usr/local/opt/openssl/include"
+BUNDLE_RETRY: 3
