Updated tmux configuration to be compatible with the latest version

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,10 +40,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # Disable mouse input
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+set -g mouse off
 
 # Colors!
 set -g default-terminal "screen-256color"
@@ -76,7 +73,6 @@ set -g status-left-length 40
 set -g status-bg black
 set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 set -g status-right "#[fg=cyan]%a %d %b %G  %R"
-set -g status-utf8 on
 set -g status-interval 60
 set -g monitor-activity on
 set -g visual-activity on
