--- a/bundle/config
+++ b/bundle/config
@@ -1,10 +1,13 @@
 ---
-BUNDLE_BUILD__LIBV8: "--with-system-v8"
-BUNDLE_JOBS: '4'
-BUNDLE_DISABLE_MULTISOURCE: 'true'
-BUNDLE_GEM__TEST: rspec
-BUNDLE_GEM__COC: 'false'
-BUNDLE_GEM__MIT: 'true'
-BUNDLE_BUILD__MYSQL: "--with-mysql-config=/usr/local/bin/mysql_config"
+BUNDLE_JOBS: "4"
+BUNDLE_DISABLE_MULTISOURCE: "true"
+BUNDLE_GEM__TEST: "rspec"
+BUNDLE_GEM__COC: "false"
+BUNDLE_GEM__MIT: "true"
+BUNDLE_BUILD__MYSQL: "\"--with-mysql-config=/usr/local/bin/mysql_config --with-cflags=-I/usr/local/opt/openssl/include"
 BUNDLE_BUILD__EVENTMACHINE: "--with-cppflags=-I/usr/local/opt/openssl/include"
-BUNDLE_RETRY: 3
+BUNDLE_RETRY: "3"
+BUNDLE_BUILD__NOKOGIRI: "--use-system-libraries --with-xml2-include=/usr/local/opt/libxml2/include/libxml2"
+BUNDLE_BUILD__MYSQL2: "--with-mysql-config=/usr/local/bin/mysql_config --with-cflags=-I/usr/local/opt/openssl/include --with-ldflags=-L/usr/local/opt/openssl/lib"
+BUNDLE_BUILD__THERUBYRACER: "--with-system-v8 --with-v8-dir=/usr/local/opt/v8-315"
+BUNDLE_BUILD__LIBV8: "--with-system-v8 --with-v8-dir=/usr/local/opt/v8-315"
